--- a/config.env
+++ b/config.env
@@ -4,3 +4,5 @@ DATABASE=mongodb+srv://admin:<PASSWORD>@cluster0.fs0wrzp.mongodb.net/natours_1?r
 DATABASE_PASSWORD=admin
 SECRET_KEY=HP-BY-HP-DIM_MY_LOVE
 JWT_EXPIRE_IN=90d
+Username=2606a85a933785
+Password=3087c3ba2385eb
