--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.4.4",
     "mongose": "^0.0.2-security",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.7",
     "slugify": "^1.6.5",
     "validator": "^13.7.0"
   },
